--- a/x86.md
+++ b/x86.md
@@ -35,7 +35,7 @@ JE jina_cast; Pokud jsou hodnoty rovny = skok na návěstí s názvem 'jina_cast
 
 # Co předchází podmínkám?
 
-- Podmínky fungují pomocí stavu různých `příznaků (flags)` v EFLAGS registru
+- Podmínky fungují pomocí stavu různých `příznaků (flags)` v FLAGS registru
 - Tyto příznaky jsou nastavovány podle výsledků aritmetických a logických operací
 - **Skokové instrukce pak tyto příznaky kontrolují** - podle výsledku se rozhodnou, zdali skok provést či nikoliv
 ```
