--- a/x86.md
+++ b/x86.md
@@ -39,6 +39,6 @@ JE jina_cast; Pokud jsou hodnoty rovny = skok na návěstí s názvem 'jina_cast
 - Tyto příznaky jsou nastavovány podle výsledků aritmetických a logických operací
 - **Skokové instrukce pak tyto příznaky kontrolují** - podle výsledku se rozhodnou, zdali skok provést či nikoliv
 ```
-CMP EAX, BAX; Tato instrukce nastaví příznaky v EFLAGS registru
+CMP EAX, BAX; Tato instrukce nastaví příznaky v FLAGS registru
 JE jina_cast; Podle příznaků se rozhodne o skoku
 ```
